--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       max-width: 600px;
       margin: 2rem auto;
       padding: 1rem;
+      background-image: 'intro.JPG';
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
     }
     input {
       width: 100%;
