--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
+      min-height: 100vh;
     }
     input {
       width: 100%;
       padding: 0.5rem;
       margin-bottom: 1rem;
       font-size: 1rem;
+      box-sizing: border-box;
     }
     li {
       margin-bottom: 0.5rem;
