--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Seznam písní</title>
+  <title>K táboráku a tak...</title>
   <style>
     body {
       font-family: sans-serif;
@@ -28,8 +28,8 @@
   </style>
 </head>
 <body>
-  <h1>🎸 Seznam písniček</h1>
-  <input type="text" id="search" placeholder="Hledej písničku...">
+  <h1>🎸 SONGS LIST</h1>
+  <input type="text" id="search" placeholder="Find your song...">
 
   <ul id="song-list"></ul>
 
