--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
     li {
       margin-bottom: 0.5rem;
     }
+    h1 {
+        font-size: 50px;
+        text-align: center;
+    }
   </style>
 </head>
 <body>
-  <h1>🎸 SONGS LIST</h1>
+  <h1>SONGS4EVERYONE</h1>
   <input type="text" id="search" placeholder="Find your song...">
 
   <ul id="song-list"></ul>
