--- a/songs/skakalpes.html
+++ b/songs/skakalpes.html
@@ -17,6 +17,6 @@ Today is gonna be the day
 That they're gonna throw it back to you
 ...
   </pre>
-  <p><a href="../index.html">Zpět na seznam</a></p>
+  <h1><a href="../index.html">BACK</a></h1>
 </body>
 </html>
