--- a/songs/skakalpes.html
+++ b/songs/skakalpes.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="cs">
+
 <head>
+  
   <meta charset="UTF-8">
   <title>Wonderwall – Oasis</title>
+  <style>
+    body {
+    background-image: url('../introm.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    min-height: 100vh;
+    }
+  </style>
 </head>
 <body>
   <h1>Wonderwall – Oasis</h1>
