--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
       margin-bottom: 1rem;
       font-size: 1rem;
       box-sizing: border-box;
+      border-radius: 16px;
+      border: 1px solid #ccc;
     }
     li {
       margin-bottom: 0.5rem;
