--- a/songs/statistika.html
+++ b/songs/statistika.html
@@ -7,7 +7,7 @@
   <title>Statistika</title>
   <style>
     body {
-    background-image: url('../introm.jpeg');
+    background-image: url('../songm.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
@@ -68,6 +68,6 @@
     
     [R. Refrén]
         </pre>
-  <h1><a href="../index.html">BACK</a></h1>
+  <h2><a href="../index.html">BACK</a></h2>
 </body>
 </html>
