--- a/songs/statistika.html
+++ b/songs/statistika.html
@@ -12,8 +12,29 @@
     background-repeat: no-repeat;
     background-position: center center;
     min-height: 100vh;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
     }
+    .song-container {
+            width: 80%;              /* Nastavení šířky kontejneru */
+            max-width: 700px;        /* Maximální šířka */
+            text-align: left;        /* Text zarovnaný vlevo */
+            font-family: 'Georgia', serif;
+            line-height: 1.6;
+            background-color: #f0f0f0;
+            padding: 1rem;
+            border-radius: 8px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        pre {
+            font-family: inherit;
+            white-space: pre-wrap;
+            margin: 0;
+        }
     h1 {
         font-size: 50px;
         text-align: center;
