--- a/songs/statistika.html
+++ b/songs/statistika.html
@@ -23,6 +23,7 @@
             max-width: 700px;        /* Maximální šířka */
             text-align: left;        /* Text zarovnaný vlevo */
             font-family: 'Georgia', serif;
+            color: #D3D3D3;
             line-height: 1.6;
             background-color: #f0f0f0;
             padding: 1rem;
@@ -36,9 +37,11 @@
             margin: 0;
         }
     h1 {
+
         font-size: 50px;
         text-align: center;
         font-family: cursive;
+        color: #D3D3D3;
     }
   </style>
 </head>
