--- a/songs/statistika.html
+++ b/songs/statistika.html
@@ -7,15 +7,16 @@
   <title>Statistika</title>
   <style>
     body {
-    background-image: url('../songm.jpeg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    min-height: 100vh;
-    display: flex;
-
-    height: 100vh;
-    margin: 0;
+      font-family: sans-serif;
+      color: #D3D3D3;
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 1rem;
+      background-image: url('songm.jpeg');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center;
+      min-height: 100vh;
     }
  
 
