--- a/songs/statistika.html
+++ b/songs/statistika.html
@@ -8,11 +8,11 @@
   <style>
     body {
       font-family: sans-serif;
-      color: #D3D3D3;
+      color: #e7e2e2;
       max-width: 600px;
       margin: 2rem auto;
       padding: 1rem;
-      background-image: url('songm.jpeg');
+      background-image: url('../songm.jpeg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
@@ -22,7 +22,7 @@
 
     pre {
         font-family: inherit;
-        color: #D3D3D3;
+        color: #e7e2e2;
         white-space: pre-wrap;
         margin: 0;
     }
@@ -31,7 +31,7 @@
         font-size: 50px;
         text-align: center;
         font-family: cursive;
-        color: #D3D3D3;
+        color: #e7e2e2;
     }
   </style>
 </head>
