--- a/songs/statistika.html
+++ b/songs/statistika.html
@@ -4,7 +4,7 @@
 <head>
   
   <meta charset="UTF-8">
-  <title>Statistika</title>
+  <title>SONGS4EVERYONE</title>
   <style>
     body {
       font-family: sans-serif;
@@ -12,7 +12,7 @@
       max-width: 600px;
       margin: 2rem auto;
       padding: 1rem;
-      background-image: url('../songm.jpeg');
+      background-image: url('../l1b.jpeg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
@@ -32,6 +32,31 @@
         text-align: center;
         font-family: cursive;
         color: #e7e2e2;
+    }
+    a {
+    text-decoration: none; /* Odstraní podtržení */
+    color: #e7e2e2;        /* Tmavě šedý text */
+    }
+
+    /* Barva pro nekliknuté odkazy */
+    a:link {
+        color: #e7e2e2;        /* Tmavě šedá barva */
+    }
+
+    /* Barva pro navštívené odkazy */
+    a:visited {
+        color: #e7e2e2;        /* Světle šedá barva pro navštívené odkazy */
+    }
+
+    /* Barva pro odkazy při najetí myší */
+    a:hover {
+        color: #ffe601;        /* Oranžová barva při najetí myší */
+        text-decoration: underline; /* Podtržení při najetí */
+    }
+
+    /* Barva pro aktivní odkazy při kliknutí */
+    a:active {
+        color: #FF0000;        /* Červená barva při kliknutí */
     }
   </style>
 </head>
