--- a/index.html
+++ b/index.html
@@ -32,6 +32,32 @@
         text-align: center;
         font-family: cursive;
     }
+    a {
+    text-decoration: none; /* Odstraní podtržení */
+    color: #050505;        /* Tmavě šedý text */
+    font-size: 25px;
+    }
+
+    /* Barva pro nekliknuté odkazy */
+    a:link {
+        color: #050505;        /* Tmavě šedá barva */
+    }
+
+    /* Barva pro navštívené odkazy */
+    a:visited {
+        color: #ffe601;        /* Světle šedá barva pro navštívené odkazy */
+    }
+
+    /* Barva pro odkazy při najetí myší */
+    a:hover {
+        color: #ffe601;        /* Oranžová barva při najetí myší */
+        text-decoration: underline; /* Podtržení při najetí */
+    }
+
+    /* Barva pro aktivní odkazy při kliknutí */
+    a:active {
+        color: #FF0000;        /* Červená barva při kliknutí */
+    }
   </style>
 </head>
 <body>
