--- a/songs/statistika.html
+++ b/songs/statistika.html
@@ -31,7 +31,8 @@
         font-size: 50px;
         text-align: center;
         font-family: cursive;
-        color: #e7e2e2;
+        color: #ffe601; 
+
     }
     a {
     text-decoration: none; /* Odstraní podtržení */
@@ -50,13 +51,13 @@
 
     /* Barva pro odkazy při najetí myší */
     a:hover {
-        color: #ffe601;        /* Oranžová barva při najetí myší */
+        color: #c5b416;        /* Oranžová barva při najetí myší */
         text-decoration: underline; /* Podtržení při najetí */
     }
 
     /* Barva pro aktivní odkazy při kliknutí */
     a:active {
-        color: #FF0000;        /* Červená barva při kliknutí */
+        color: #c5b416;        /* Červená barva při kliknutí */
     }
   </style>
 </head>
