--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 
     /* Barva pro odkazy při najetí myší */
     a:hover {
-        color: #ffe601;        /* Oranžová barva při najetí myší */
+        color: #c5b416;        /* Oranžová barva při najetí myší */
         text-decoration: underline; /* Podtržení při najetí */
     }
 
     /* Barva pro aktivní odkazy při kliknutí */
     a:active {
-        color: #FF0000;        /* Červená barva při kliknutí */
+        color: #e0630f;        /* Červená barva při kliknutí */
     }
   </style>
 </head>
