--- a/songs/statistika.html
+++ b/songs/statistika.html
@@ -57,7 +57,7 @@
 
     /* Barva pro aktivní odkazy při kliknutí */
     a:active {
-        color: #c5b416;        /* Červená barva při kliknutí */
+        color: #e0630f;        /* Červená barva při kliknutí */
     }
   </style>
 </head>
