--- a/index.html
+++ b/index.html
@@ -32,31 +32,32 @@
         text-align: center;
         font-family: cursive;
     }
+    /*href base*/
     a {
-    text-decoration: none; /* Odstraní podtržení */
-    color: #050505;        /* Tmavě šedý text */
+    text-decoration: none; 
+    color: #050505;       
     font-size: 25px;
     }
 
-    /* Barva pro nekliknuté odkazy */
+    /*nonvisited*/
     a:link {
-        color: #050505;        /* Tmavě šedá barva */
+        color: #050505;     
     }
 
-    /* Barva pro navštívené odkazy */
+    /*visited*/
     a:visited {
-        color: #ffe601;        /* Světle šedá barva pro navštívené odkazy */
+        color: #ffe601; 
     }
 
-    /* Barva pro odkazy při najetí myší */
+    /*moving mouse*/
     a:hover {
-        color: #c5b416;        /* Oranžová barva při najetí myší */
-        text-decoration: underline; /* Podtržení při najetí */
+        color: #c5b416;        
+        text-decoration: underline; 
     }
 
-    /* Barva pro aktivní odkazy při kliknutí */
+    /*after clicking*/
     a:active {
-        color: #e0630f;        /* Červená barva při kliknutí */
+        color: #e0630f; 
     }
   </style>
 </head>
