--- a/songs/statistika.html
+++ b/songs/statistika.html
@@ -34,30 +34,31 @@
         color: #ffe601; 
 
     }
+    /*href base*/
     a {
-    text-decoration: none; /* Odstraní podtržení */
-    color: #e7e2e2;        /* Tmavě šedý text */
+      text-decoration: none; 
+      color: #e7e2e2;
     }
 
-    /* Barva pro nekliknuté odkazy */
+    /*nonvisited*/
     a:link {
-        color: #e7e2e2;        /* Tmavě šedá barva */
+      color: #e7e2e2;      
     }
 
-    /* Barva pro navštívené odkazy */
+    /*visited*/
     a:visited {
-        color: #e7e2e2;        /* Světle šedá barva pro navštívené odkazy */
+      color: #e7e2e2; 
     }
 
-    /* Barva pro odkazy při najetí myší */
+    /*moving mouse*/
     a:hover {
-        color: #c5b416;        /* Oranžová barva při najetí myší */
-        text-decoration: underline; /* Podtržení při najetí */
+        color: #c5b416;        
+        text-decoration: underline; 
     }
 
-    /* Barva pro aktivní odkazy při kliknutí */
+    /*after clicking*/
     a:active {
-        color: #e0630f;        /* Červená barva při kliknutí */
+        color: #e0630f; 
     }
   </style>
 </head>
