--- a/songs/jozin.html
+++ b/songs/jozin.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>Jožin z bažin - Mládek</h1>
+  <h1>Mládek - Jožin z bažin</h1>
   <pre>
     [Verse 1]
     Ami                  E7           Ami
