--- a/songs/uzjetotak.html
+++ b/songs/uzjetotak.html
@@ -12,7 +12,7 @@
       max-width: 600px;
       margin: 2rem auto;
       padding: 1rem;
-      background-image: url('../l3b.jpeg');
+      background-image: url('../l2b.jpeg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>Už je to tak - Záviš</h1>
+  <h1>Záviš - Už je to tak</h1>
   <pre>
     [Verse 1]
     Emi           A          Emi        A
