--- a/songs/zbyljsemtusam.html
+++ b/songs/zbyljsemtusam.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>Zbyl jsem tu sám - Záviš</h1>
+  <h1>Záviš - Zbyl jsem tu sám</h1>
   <pre>
     [Verse 1]
              C                G
