--- a/songs/cervenymost.html
+++ b/songs/cervenymost.html
@@ -12,7 +12,7 @@
       max-width: 600px;
       margin: 2rem auto;
       padding: 1rem;
-      background-image: url('../l4b.jpeg');
+      background-image: url('../l2b.jpeg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
@@ -63,7 +63,7 @@
   </style>
 </head>
 <body>
-  <h1>Červený most - Záviš</h1>
+  <h1>Záviš - Červený most</h1>
   <pre>
     [Verse 1]
     Dmi 
