--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       max-width: 600px;
       margin: 2rem auto;
       padding: 1rem;
-      background-image: url('introm.jpeg');
+      background-image: url('figs/introm.jpeg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
