--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
     }
   
     body {
+      font-family: sans-serif;
+      max-width: 600px;
+      margin: 2rem auto;
+      padding: 1rem;
       background-image: url('figs/introm.jpeg');
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
+      min-height: 100vh;
     }
   
     .container {
