--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       background-size: cover;
       background-repeat: no-repeat;
       background-position: center center;
+      background-attachment: fixed;
       min-height: 100vh;
     }
   
