--- a/songs/Vráťa Hošek - Mešita.html
+++ b/songs/Vráťa Hošek - Mešita.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Vráťa Hošek - Mešita</h1>
   <pre>
     [Verse 1]
