--- a/songs/Asonance - Čarodějnice z amesbury.html
+++ b/songs/Asonance - Čarodějnice z amesbury.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Asonance - Čarodějnice z amesbury</h1>
   <pre>
     Dmi         C          Dmi
