--- a/songs/Brontosauři - Tulácký ráno.html
+++ b/songs/Brontosauři - Tulácký ráno.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Brontosauři - Tulácký ráno</h1>
   <pre>
     Dmi                        Ami                     Dmi
