--- a/songs/Daněk - Montgomery.html
+++ b/songs/Daněk - Montgomery.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Daněk - Montgomery</h1>
   <pre>
     C                      F     Dmi
