--- a/songs/Janoušek - Škoda 1000mb.html
+++ b/songs/Janoušek - Škoda 1000mb.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+   <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Janoušek - Škoda 1000mb</h1>
   <pre>
     G           G/F#    Emi
