--- a/songs/Kryl - Anděl.html
+++ b/songs/Kryl - Anděl.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Kryl - Anděl</h1>
   <pre>
     G         Emi          G           D7
