--- a/songs/Kryl - Bratříčku zavírej vrátka.html
+++ b/songs/Kryl - Bratříčku zavírej vrátka.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Kryl - Bratříčku zavírej vrátka</h1>
   <pre>
     Ami                            C
