--- a/songs/Matuška - Růže z texasu.html
+++ b/songs/Matuška - Růže z texasu.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Matuška - Růže z texasu</h1>
   <pre>
     [1. Sloka]
