--- a/songs/Nohavica - Dokud se zpívá.html
+++ b/songs/Nohavica - Dokud se zpívá.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+   <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Nohavica - Dokud se zpívá</h1>
   <pre>
     1.
