--- a/songs/Nohavica - Tramp.html
+++ b/songs/Nohavica - Tramp.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Nohavica - Tramp</h1>
   <pre>
     [Verse 1]
