--- a/songs/Olympic - Slzy tvý mámy.html
+++ b/songs/Olympic - Slzy tvý mámy.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Olympic - Slzy tvý mámy</h1>
   <pre>
     INTRO: (2X)
