--- a/songs/Olympic - Želva.html
+++ b/songs/Olympic - Želva.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Olympic - Želva</h1>
   <pre>
     [1. Sloka]
