--- a/songs/Poutníci - Panenka.html
+++ b/songs/Poutníci - Panenka.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Poutníci - Panenka</h1>
   <pre>
     C             F       C       F                     
