--- a/songs/Rivola - Bedna od whisky.html
+++ b/songs/Rivola - Bedna od whisky.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Rivola - Bedna od whisky</h1>
   <pre>
     Ami          C        Ami            E
