--- a/songs/Spiritual kvintet - Batalion.html
+++ b/songs/Spiritual kvintet - Batalion.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Spiritual kvintet - Batalion</h1>
   <pre>
     Ami  C     G    Ami           C      G  Ami Emi Ami
