--- a/songs/The Animals - House of the rising sun.html
+++ b/songs/The Animals - House of the rising sun.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>The Animals - House of the rising sun</h1>
   <pre>
     intro
