--- a/songs/The Beatles - Norwegian wood.html
+++ b/songs/The Beatles - Norwegian wood.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>The Beatles - Norwegian wood</h1>
     <pre>
         [Version 1]
