--- a/songs/Tučný - Všichni jsou už v Mexiku.html
+++ b/songs/Tučný - Všichni jsou už v Mexiku.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Tučný - Všichni jsou už v Mexiku</h1>
   <pre>
     [Úvod]
