--- a/songs/Unknown - Tři citrónky.html
+++ b/songs/Unknown - Tři citrónky.html
@@ -63,6 +63,7 @@
   </style>
 </head>
 <body>
+  <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Unknown - Tři citronky</h1>
   <pre>
 C       Ami    Dmi  G  C          Ami    Dmi    G
