--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>SONGS4EVERYONE</title>
+  <title>songs4everyone</title>
   <style>
     html, body {
       height: 100%;
