--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
+  <title>songs4everyone – český web pro sdílení hudby</title>
+  <meta name="description" content="Songs4everyone nabizejici pisnicky s akordy k táborákům.">
+  <meta name="keywords" content="songs4everyone, české písničky, sdílení hudby, texty písní, folk, country, trampské písničky, kytara, táborák">
+  <meta name="robots" content="index, follow">
+  
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+  </style>
+</head>
   <title>songs4everyone</title>
   <style>
     html, body {
