--- a/songs/Janoušek - Škoda 1000mb.html
+++ b/songs/Janoušek - Škoda 1000mb.html
@@ -66,13 +66,13 @@
    <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Janoušek - Škoda 1000mb</h1>
   <pre>
-    G           G/F#    Emi
+         G           G/F#     Emi
     1. Vždycky, když nasedám do svého auta,
-       Ami7                 D
+         Ami7            C     D
        už zase trnu, co mě čeká,
          G        G/F#   Emi
        vžívám se do role astronauta,
-         Ami7                         D
+         Ami7                     C    D
        přinejhorším v kufru je rum a deka,
          C    Hmi Ami    G C  G      C G C G C
        tři, dva, jedna, vrm, napoprvé!
