--- a/new/Alphaville - Big in Japan.html
+++ b/new/Alphaville - Big in Japan.html
@@ -64,57 +64,11 @@
 </head>
 <body>
   <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
-  <h1>Unknown - Okoř</h1>
+  <h1>Asonance - Čarodějnice z amesbury</h1>
   <pre>
+//text
+</pre>
 
-[Version 1]
-D
-Na Okoř je cesta, jako žádná ze sta,
-A7               D
-roubená je stromama.
-D
-Když jdu po ní v létě, samoten na světě,
-A7               D
-sotva pletu nohama.
-G                 D
-Na konci té cesty trnité,
-E7                          A7
-stojí krčma jako hrad, jako hrad.
-D
-Tam zapadli trampi, hladoví a sešlí,
-A7             D
-začli sobě notovat.
- 
-[Chorus]
-D              A
-Na hradě Okoři světla už nehoří,
-D         A           D
-bílá paní šla už dávno spát.
-                  A
-Ta měla ve zvyku, podle svého budíku,
-D         A           D
-o půlnoci chodit strašívat.
-G                         D
-Od těch dob, co jsou tam trampové,
-E7                  A7
-nesmí z hradu pryč, z hradu pryč.
-D                    A
-O půlnoci v podhradí se šerifem dovádí,
-D         A           D
-on jí sebral od komnaty klíč.
-  
-[Version 2]
-Jednoho dne z rána roznesla se zpráva,
-že byl Okoř vykraden.
-Nikdo neví dodnes, kdo to tenkrát odnes,
-nikdo nebyl dopaden.
-Šerif hrál celou noc mariáš
-s bílou paní v kostinci, v kostinci.
-Místo aby hlídal, zuřivě ji líbal,
-dostal z toho zimnici.
-  
-[Chorus]
- </pre>
     
   <h2><a href="../index.html">BACK</a></h2>
 </body>
