--- a/songs/Unknown - Tři citrónky.html
+++ b/songs/Unknown - Tři citrónky.html
@@ -66,60 +66,61 @@
   <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
   <h1>Unknown - Tři citronky</h1>
   <pre>
+[Verse 1]
 C       Ami    Dmi  G  C          Ami    Dmi    G
-1. V jedné mořské pustině ztroskotal parník v hlubině,
+V jedné mořské pustině ztroskotal parník v hlubině,
    C         Ami  Dmi   G                  C
-   jenom tři malé citrónky zůstaly na hladině.
+jenom tři malé citrónky zůstaly na hladině.
 
+[Chorus]
+C         Ami       Dmi      G
+Rybaroba, Rybaroba, Rybaroba čuču
+Rybaroba, Rybaroba, Rybaroba čuču
+Rybaroba, Rybaroba, Rybaroba čuču
+            C
+zůstaly na hladině.
 
-     C         Ami       Dmi      G
-Ref: Rybaroba, Rybaroba, Rybaroba čuču
-     Rybaroba, Rybaroba, Rybaroba čuču
-     Rybaroba, Rybaroba, Rybaroba čuču
-                     C
-     zůstaly na hladině.
-
-
+[Verse 2]
    C            Ami    Dmi  G   C        Ami    Dmi  G
-2. Jeden z nich povídá Přátelé, netvařte se tak kysele,
+Jeden z nich povídá Přátelé, netvařte se tak kysele,
    C           Ami   Dmi  G                    C
-   vždyť je to přece veselé, že nám patří moře celé. 
+vždyť je to přece veselé, že nám patří moře celé. 
 
+[Chorus]
+ C         Ami       Dmi      G
+Rybaroba, Rybaroba, Rybaroba čuču
+Rybaroba, Rybaroba, Rybaroba čuču
+Rybaroba, Rybaroba, Rybaroba čuču
+                    C
+že nám patří moře celé.
 
-     C         Ami       Dmi      G
-Ref: Rybaroba, Rybaroba, Rybaroba čuču
-     Rybaroba, Rybaroba, Rybaroba čuču
-     Rybaroba, Rybaroba, Rybaroba čuču
-                         C
-     že nám patří moře celé.
+[Verse 3]
+C        Ami      Dmi     G    C          Ami      Dmi    G
+A tak se citrónky plavili dál, jeden jim k tomu na kytaru hrál,
+ C         Ami    Dmi  G                C
+a tak se plavili do dáli, až na ostrov korálový.
 
+[Chorus]
+C         Ami       Dmi      G
+Rybaroba, Rybaroba, Rybaroba čuču
+Rybaroba, Rybaroba, Rybaroba čuču
+Rybaroba, Rybaroba, Rybaroba čuču
+                  C
+až na ostrov korálový.
 
-   C        Ami      Dmi     G    C          Ami      Dmi    G
-3. A tak se citrónky plavili dál, jeden jim k tomu na kytaru hrál,
-   C         Ami    Dmi  G                C
-   a tak se plavili do dáli, až na ostrov korálový.
+[Verse 4]
+C           Ami    Dmi    G    C       Ami    Dmi   G
+Tam je však stihla nehoda zlá, byla to mořská příšera,
+C       Ami      Dmi G                           C
+sežrala citrónky i s kůrou, zakončila tak baladu mou.
 
-
-     C         Ami       Dmi      G
-Ref: Rybaroba, Rybaroba, Rybaroba čuču
-     Rybaroba, Rybaroba, Rybaroba čuču
-     Rybaroba, Rybaroba, Rybaroba čuču
-                       C
-     až na ostrov korálový.
-
-
-   C           Ami    Dmi    G    C       Ami    Dmi   G
-4. Tam je však stihla nehoda zlá, byla to mořská příšera,
-   C       Ami      Dmi G                           C
-   sežrala citrónky i s kůrou, zakončila tak baladu mou.
-
-
-     C         Ami       Dmi      G
-Ref: Rybaroba, Rybaroba, Rybaroba čuču
-     Rybaroba, Rybaroba, Rybaroba čuču
-     Rybaroba, Rybaroba, Rybaroba čuču
-                           C
-     zakončila tak baladu mou.
+[Chorus]
+C         Ami       Dmi      G
+Rybaroba, Rybaroba, Rybaroba čuču
+Rybaroba, Rybaroba, Rybaroba čuču
+Rybaroba, Rybaroba, Rybaroba čuču
+                  C
+zakončila tak baladu mou.
     </pre>  
   <h2><a href="../index.html">BACK</a></h2>
 </body>
