--- a/songs/song_template.html
+++ b/songs/song_template.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="cs">
+
 <head>
   <meta charset="UTF-8">
   <title>SONGS4EVERYONE</title>
   <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
 
   <h2><a href="../figs/chords.jpeg">CHORDS</a></h2>
@@ -25,7 +27,12 @@
       fetch(`lyrics/${songFile}`)
         .then(response => response.text())
         .then(text => {
-          lyricsEl.textContent = text;
+          lyricsEl.innerHTML = text
+            .replace(/</g, "&lt;")
+            .replace(/>/g, "&gt;")
+            .replace(/\[([A-G][#b]?(m|maj7|sus\d?|dim\d?|aug\d?)?)\]/g, '<span id="chords">$1</span>')
+            .replace(/\[(?![A-G][#b]?(m|maj7|sus\d*|dim\d*|aug\d*)?\])\s*([^\]]+?)\s*\]/g, '<b><span id="chords_header">$2</span></b>')
+            .replace(/\n/g, "<br>");
 
           const songName = songFile
             .replace(/_/g, " ")
@@ -41,4 +48,5 @@
   </script>
 
 </body>
+
 </html>
